Fix spacing between social buttons on mobile.

--- a/static/css/internal/social.css
+++ b/static/css/internal/social.css
@@ -5,7 +5,7 @@
 }
 
 #kateheddleston-wrap .social .share-buttons {
-    margin-top:70px;
+    margin-top:50px;
 }
 
 #kateheddleston-wrap .social .share-button {
@@ -18,6 +18,7 @@
     width:100%;
     text-align:center;
     text-decoration:none;
+    margin-top:20px;
 }
 
 #kateheddleston-wrap .social .share-button .icon {
